@@ -9,6 +9,7 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.fail;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
@@ -48,7 +49,7 @@ public class MyResourceTest {
     @Before
     public void setUpClass() throws MalformedURLException {
         Client client = ClientBuilder.newClient();
-        target = client.target(new URL(base, "webresources/fruits").toExternalForm());
+        target = client.target(URI.create(new URL(base, "webresources/fruits").toExternalForm()));
     }
 
     /**
