@@ -8,6 +8,7 @@ package org.javaee7.jaxrs.client.negotiation;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 import javax.ws.rs.client.Client;
@@ -47,7 +48,7 @@ public class MyResourceTest {
     @Before
     public void setUpClass() throws MalformedURLException {
         Client client = ClientBuilder.newClient();
-        target = client.target(new URL(base, "webresources/persons").toExternalForm());
+        target = client.target(URI.create(new URL(base, "webresources/persons").toExternalForm()));
     }
 
     @Test
